# datascience

./: .gitignore  CLAUDE.md  K-Means.ipynb  Lista e Rede - Aula 5.ipynb  Plotting_faceting.ipynb  Plotting_seaborn.ipynb  README.md  Untitled.ipynb  altair tutorial.ipynb  altair_tutorial.ipynb  estab-350000_test_v0.3.csv  filtros.ipynb  gb_and_catboost.ipynb  metrodemandas.ipynb  musicclassifying.ipynb  nonlinearity.ipynb  pyproject.toml  regioes_censitarias_v0.1.csv  requirements.txt  streamlit_app.py  tensorflow_tutorial.ipynb  test.html  wine_eda.ipynb
.ipynb_checkpoints/: metrodemandas-checkpoint.ipynb  musicclassifying-checkpoint.ipynb
agents/: zotero_mcp_server.py  zotero_server_test.py
algorithms/: K-Means.ipynb  NeuralNet.ipynb  script-r.py  simulaca-normal.py  simulation_stochastic.ipynb
bigmacprices/: folium_chloropleth_bigmac.html  mcnotebook.ipynb
data_/: Estabelecimentos_202007.csv  estados.csv  municipios.csv  nome_municipios.csv  setores.csv  split_1_1.csv  split_1_2.csv  split_2_1.csv  split_2_2.csv
health analysis/: nikerunanalysis.ipynb
mldsfromatoz/: credit_data_y.npy  mldsfromatoz-sec26-unbalanceddata.ipynb  mldsfromatoz-sec27-featureselection.ipynb  mldsfromatoz-sec4-naivebayes.ipynb  mldsfromatoz-sec5-randomforest.ipynb
notebooks/: L7_job_application_crew.ipynb
projects/prompt_magic/: .env.example  .gitignore  README.md  main.py  pyproject.toml  utils.py
projects/prompt_magic/services/: audio_service.py  prompt_service.py  whisper_service.py
projects/prompt_magic/static/: index.html  sample-audio.m4a
torch-studies/: unet.ipynb
(+188 files in other folders)
