[tool.poetry]
name = "datascience"
version = "0.1.0"
description = ""
authors = ["Artur Magalhaes <artur.maga17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
numpy = "^2.1.3"
torch = "^2.8.0"
matplotlib = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
